# python-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  catalog-info.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  validate-workflows.sh
.github/workflows/: README.md  cd.yml  ci.yml  hotfix.yml  maintenance.yml  performance.yml  release.yml  security.yml
api-specs/: README.md  api-changelog.md  openapi.yaml  postman-collection.json  schemas.yaml  testing-guide.md
docs/: api-reference.md  contributing.md  deployment.md  development.md  getting-started.md  index.md
scripts/: init_db.py
src/: __init__.py  main.py
tests/: conftest.py  test_api.py
